# effora-cli

./: CONTRIBUTING.md  README.md  contract.json  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: release.md  setup.md
effora/: __init__.py  cli.py  pyproject.toml  sdk.py
effora/commands/: genai.py  ml.py  revenue.py
effora/engine/: __init__.py  models.py  recognition.py
tests/: test_recognition.py
