[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "effora-ai"
version = "0.1.0"
description = "ML and GenAI for Finance — CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
effora = "effora.cli:main"
[tool.hatch.build.targets.wheel]
packages = ["effora"]
