[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "effora-ai"
version = "0.1.1"
description = "ML and GenAI for Finance — CLI"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"

authors = [
  { name = "Effora AI", email = "dev@effora.ai" }
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
effora = "effora.cli:main"

[project.urls]
Homepage = "https://github.com/effora-ai/effora-cli"
Repository = "https://github.com/effora-ai/effora-cli"

[tool.hatch.build.targets.wheel]
packages = ["effora"]