[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "effora-ai"
version = "0.2.0"
description = "ML and GenAI for Finance — CLI"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"

authors = [
  { name = "Effora AI", email = "dev@effora.ai" }
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[project.scripts]
effora = "effora.cli:main"

[project.urls]
Homepage = "https://effora.ai"
Repository = "https://github.com/effora-ai/effora-cli"

[tool.hatch.build.targets.wheel]
packages = ["effora"]